remove white link color

--- a/card_terms.html
+++ b/card_terms.html
@@ -24,13 +24,6 @@
         font-family:"Arial",sans-serif;
         color:#666666;
         font-weight:normal;}
-      a:link, span.MsoHyperlink
-      {color:white;
-        text-decoration:underline;}
-      .MsoChpDefault
-      {font-family:"Arial",sans-serif;}
-      .MsoPapDefault
-      {line-height:115%;}
       @page WordSection1
       {size:8.5in 11.0in;
         margin:1.0in 1.0in 1.0in 1.0in;}
@@ -2638,7 +2631,7 @@
       >
         <a name="_7a9zfcmtd35"></a
         ><b
-          ><span lang="EN" style="font-size: 11pt; line-height: 150% ;"
+          ><span lang="EN" style="font-size: 11pt; line-height: 150%"
             >9. Survival</span
           ></b
         >
